--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 server.port=8090
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/kttest
+spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/KT
 spring.datasource.username=root
-spring.datasource.password=navigw1234!
+spring.datasource.password=1234
 
 spring.jpa.show-sql=true
 
 spring.mandatory-file-encoding=UTF-8
 server.servlet.encoding.charset=UTF-8
-server.servlet.encoding.enabled=true
+#server.servlet.encoding.enabled=true
